--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     .sidebar {
       width: 300px;
-      background: #262626;
+      background: #222927;
       color: white;
       display: flex;
       flex-direction: column;
@@ -96,7 +96,7 @@
 
     .legend {
       position: absolute;
-      bottom: 20px;
+      bottom: 80px;
       left: 20px;
       background: white;
       padding: 10px;
@@ -115,7 +115,7 @@
     }
 
      #report-toggle-button button {
-      position: fixed; bottom: 20px; left: 20px; z-index: 1000;padding: 8px 12px; background-color:  #66c2a5; color: white; border: none; border-radius: 6px; cursor: pointer;
+      position: fixed; bottom: 80px; left: 20px; z-index: 1000;padding: 8px 12px; background-color:  #66c2a5; color: white; border: none; border-radius: 6px; cursor: pointer;
     }
 
     #report-box {
@@ -189,7 +189,7 @@
         <input type="text" id="name" style="width: 100%;"><br><br>
 
         <button onclick="submitReportForm()" style="padding: 8px 12px; background-color:  #66c2a5; color: white; border: none; border-radius: 6px;">Submit</button>
-        <button onclick="closeForm()">Close</button>
+        <button onclick="closeForm()" style="padding: 8px 12px; background-color:  #66c2a5; color: white; border: none; border-radius: 6px;">Close</button>
       </div>
     </div>
   </div>
