--- a/index.html
+++ b/index.html
@@ -34,12 +34,15 @@
 
     .sidebar {
       width: 300px;
-      background: #222927;
+      background: #2c2e36;
       color: white;
       display: flex;
       flex-direction: column;
       padding: 20px;
       box-sizing: border-box;
+      border-radius: 6px;
+      border: 3px;
+      border-color:  linear-gradient(to right, #00695c, #66c2a5);
     }
 
     .sidebar h1 {
@@ -54,7 +57,7 @@
     .sidebar p {
       margin: 0.3rem 0 0;
       color:white;
-      opacity: 0.9;
+      opacity: 2;
       font-size: 14px;
       
     }
@@ -74,7 +77,7 @@
       text-align: center;
       padding: 10px;
       font-size: 12px;
-      background: #66c2a5;
+      background: linear-gradient(to right, #00695c, #66c2a5);
       color: white;
     }
     
@@ -115,12 +118,13 @@
     }
 
      #report-toggle-button button {
-      position: fixed; bottom: 80px; left: 20px; z-index: 1000;padding: 8px 12px; background-color:  #66c2a5; color: white; border: none; border-radius: 6px; cursor: pointer;
+      position: fixed; bottom: 80px; left: 20px; z-index: 1000;padding: 8px 12px; background-color: linear-gradient(to right, #00695c, #66c2a5); color: white; border: none; border-radius: 6px; cursor: pointer;
     }
 
     #report-box {
+      position: fixed; bottom: 80px; right: 20px; z-index: 1000;
       display: none;
-      background: white;
+      background: #2c2e36;
       padding: 12px;
       border-radius: 10px;
       width: 260px;
@@ -188,8 +192,8 @@
         <label>Additional Comments:</label><br>
         <input type="text" id="name" style="width: 100%;"><br><br>
 
-        <button onclick="submitReportForm()" style="padding: 8px 12px; background-color:  #66c2a5; color: white; border: none; border-radius: 6px;">Submit</button>
-        <button onclick="closeForm()" style="padding: 8px 12px; background-color:  #66c2a5; color: white; border: none; border-radius: 6px;">Close</button>
+        <button onclick="submitReportForm()" style="padding: 8px 12px; background-color: linear-gradient(to right, #00695c, #66c2a5); color: white; border: none; border-radius: 6px;">Submit</button>
+        <button onclick="closeForm()" style="padding: 8px 12px; background-color:  linear-gradient(to right, #00695c, #66c2a5); color: white; border: none; border-radius: 6px;">Close</button>
       </div>
     </div>
   </div>
