--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
 
     .sidebar {
       width: 300px;
-      background: #2c2e36;
+      background: #1a1f1e;
       color: white;
       display: flex;
       flex-direction: column;
       padding: 20px;
       box-sizing: border-box;
-      border-radius: 6px;
-      border: 3px;
+      border-radius: 8px;
+      border: 8px;
       border-color:  linear-gradient(to right, #00695c, #66c2a5);
     }
 
@@ -57,7 +57,7 @@
     .sidebar p {
       margin: 0.3rem 0 0;
       color:white;
-      opacity: 2;
+      opacity: 8;
       font-size: 14px;
       
     }
@@ -124,7 +124,7 @@
     #report-box {
       position: fixed; bottom: 80px; right: 20px; z-index: 1000;
       display: none;
-      background: #2c2e36;
+      background: #d5e6de;
       padding: 12px;
       border-radius: 10px;
       width: 260px;
@@ -180,21 +180,24 @@
         <label>Location:</label><br>
         <input type="text" id="location" style="width: 100%;"><br><br>
 
-        <label>Short Description:</label><br>
-        <input type="text" id="shortDesc" style="width: 100%;"><br><br>
+        <label>Local Knowledge & Observations:</label><br>
+        <input id="details" rows="3" style="width: 100%;"><br><br>
 
-        <label>Details:</label><br>
+        <label>Cause & Effect (Community Insight):</label><br>
         <textarea id="details" rows="3" style="width: 100%;"></textarea><br><br>
 
         <label>Upload Media:</label><br>
         <input type="file" id="mediaUpload"><br><br>
+
+        <label>Suggestions / Action:</label><br>
+        <input type="text" id="name" style="width: 100%;"><br><br>
 
         <label>Additional Comments:</label><br>
         <input type="text" id="name" style="width: 100%;"><br><br>
 
         <button onclick="submitReportForm()" style="padding: 8px 12px; background-color: linear-gradient(to right, #00695c, #66c2a5); color: white; border: none; border-radius: 6px;">Submit</button>
         <button onclick="closeForm()" style="padding: 8px 12px; background-color:  linear-gradient(to right, #00695c, #66c2a5); color: white; border: none; border-radius: 6px;">Close</button>
-      </div>
+  
     </div>
   </div>
 
