--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       box-sizing: border-box;
       border-radius: 8px;
       border: 8px;
-      border-color:  linear-gradient(to right, #00695c, #66c2a5);
+      border-color:  #66c2a5;
     }
 
     .sidebar h1 {
@@ -118,16 +118,17 @@
     }
 
      #report-toggle-button button {
-      position: fixed; bottom: 80px; left: 20px; z-index: 1000;padding: 8px 12px; background-color: linear-gradient(to right, #00695c, #66c2a5); color: white; border: none; border-radius: 6px; cursor: pointer;
+      position: fixed; bottom: 80px; left: 20px; z-index: 1000;padding: 8px 12px; background-color: #66c2a5; color: white; border: none; border-radius: 6px; cursor: pointer;
     }
 
     #report-box {
-      position: fixed; bottom: 80px; right: 20px; z-index: 1000;
+      position: fixed; bottom: 80px; left: 20px; z-index: 1000;
       display: none;
       background: #d5e6de;
       padding: 12px;
       border-radius: 10px;
       width: 260px;
+      height: 450px;
       box-shadow: 0 0 12px rgba(0, 0, 0, 0.4);
     }
 
@@ -157,14 +158,14 @@
 
       <!-- Legend -->
       <div id="legend" class="legend">
-  <b style="color: black;">Forest_Loss_by_year (0–24)</b>
+  <b style="color: black;">Forest_Loss_by_year (1–23</b>
   <div style="width: 200px; height: 15px; background: linear-gradient(to right, #0b0405, #170c14, #211424, #2b1c35, #342446, #3a2c58, #3e356b, #413e7e, #40498e, #3b5698, #38639d, #366fa0, #357ba3, #3487a6, #3492a8, #359fab, #39abac, #3fb6ad, #4bc2ad, #5dcdad, #7ad6ae, #99ddb6, #b4e5c3, #cbedd5, #def5e5); border: 1px solid #999; margin: 5px 0;"></div>
   <div style="display: flex; justify-content: space-between; font-size: 12px;">
-    <span>0</span>
+    <span>1</span>
     <span>6</span>
-    <span>12</span>
-    <span>18</span>
-    <span>24</span>
+    <span>11</span>
+    <span>17</span>
+    <span>23</span>
   </div>
 </div>
 
@@ -195,8 +196,8 @@
         <label>Additional Comments:</label><br>
         <input type="text" id="name" style="width: 100%;"><br><br>
 
-        <button onclick="submitReportForm()" style="padding: 8px 12px; background-color: linear-gradient(to right, #00695c, #66c2a5); color: white; border: none; border-radius: 6px;">Submit</button>
-        <button onclick="closeForm()" style="padding: 8px 12px; background-color:  linear-gradient(to right, #00695c, #66c2a5); color: white; border: none; border-radius: 6px;">Close</button>
+        <button onclick="submitReportForm()" style="padding: 8px 12px; background-color: #66c2a5; color: white; border: none; border-radius: 6px;">Submit</button>
+        <button onclick="closeForm()" style="padding: 8px 12px; background-color:  #66c2a5; color: white; border: none; border-radius: 6px;">Close</button>
   
     </div>
   </div>
