--- a/index.html
+++ b/index.html
@@ -121,16 +121,8 @@
       position: fixed; bottom: 80px; left: 20px; z-index: 1000;padding: 8px 12px; background-color: #66c2a5; color: white; border: none; border-radius: 6px; cursor: pointer;
     }
 
-    #report-box {
-      position: fixed; bottom: 80px; left: 20px; z-index: 1000;
-      display: none;
-      background: #d5e6de;
-      padding: 12px;
-      border-radius: 10px;
-      width: 260px;
-      height: 450px;
-      box-shadow: 0 0 12px rgba(0, 0, 0, 0.4);
-    }
+    
+    
 
 
   </style>
@@ -158,7 +150,7 @@
 
       <!-- Legend -->
       <div id="legend" class="legend">
-  <b style="color: black;">Forest_Loss_by_year (1–23</b>
+  <b style="color: black;">Forest_Loss_by_year (1–23)</b>
   <div style="width: 200px; height: 15px; background: linear-gradient(to right, #0b0405, #170c14, #211424, #2b1c35, #342446, #3a2c58, #3e356b, #413e7e, #40498e, #3b5698, #38639d, #366fa0, #357ba3, #3487a6, #3492a8, #359fab, #39abac, #3fb6ad, #4bc2ad, #5dcdad, #7ad6ae, #99ddb6, #b4e5c3, #cbedd5, #def5e5); border: 1px solid #999; margin: 5px 0;"></div>
   <div style="display: flex; justify-content: space-between; font-size: 12px;">
     <span>1</span>
@@ -177,7 +169,7 @@
 
       <!-- Report Box -->
       <div id="report-box">
-        <h4 style="margin-top: 0;">Deforestation Report</h4>
+        <h4 style="margin-top: 0;"> Report & Comment </h4>
         <label>Location:</label><br>
         <input type="text" id="location" style="width: 100%;"><br><br>
 
