--- a/index.html
+++ b/index.html
@@ -116,6 +116,26 @@
       left: 340px;
       z-index: 1000;
     }
+    #report-box {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    z-index: 1000;
+    display: none;
+    background: #d5e6de;
+    padding: 12px;
+    border-radius: 10px;
+    width: 260px;
+    height: 450px;
+    box-shadow: 0 0 12px rgba(0, 0, 0, 0.4);
+    font-family: sans-serif;
+
+    input[type="text"], textarea {
+    font-size: 12px;
+    border-radius: 5px;
+    border: 1px solid #aaa;
+    padding: 4px;
+  }
 
      #report-toggle-button button {
       position: fixed; bottom: 80px; left: 20px; z-index: 1000;padding: 8px 12px; background-color: #66c2a5; color: white; border: none; border-radius: 6px; cursor: pointer;
