--- a/index.html
+++ b/index.html
@@ -118,15 +118,15 @@
     }
     #report-box {
     position: fixed;
-    bottom: 0;
-    right: 0;
+    bottom: 70;
+    left: 0;
     z-index: 1000;
     display: none;
     background: #d5e6de;
     padding: 12px;
     border-radius: 10px;
     width: 260px;
-    height: 450px;
+    height: 400px;
     box-shadow: 0 0 12px rgba(0, 0, 0, 0.4);
     font-family: sans-serif;
 
