--- a/index.html
+++ b/index.html
@@ -190,6 +190,18 @@
         <label>Location:</label><br>
         <input type="text" id="location" style="width: 100%;"><br><br>
 
+         <label>Issue Type:</label><br />
+  <select id="issueType" style="width: 100%;">
+    <option value="Tree Cutting">Tree Cutting</option>
+    <option value="Illegal Burning">Illegal Burning</option>
+    <option value="Land Clearing">Land Clearing</option>
+    <option value="Wildlife Displaced">Wildlife Displaced</option>
+    <option value="Other">Other</option>
+  </select><br /><br />
+      <label>Details:</label><br />
+  <textarea id="details" rows="3" style="width: 100%;"></textarea><br /><br />
+</div>
+
         <label>Local Knowledge & Observations:</label><br>
         <input id="details" rows="3" style="width: 100%;"><br><br>
 
