--- a/index.html
+++ b/index.html
@@ -96,7 +96,14 @@
       height: 90%;
       z-index: 1;
     }
+    
+  #map {
+    background-color: #848c89; /* or any color like white, gray, etc. */
+  }
 
+
+
+    
     .legend {
       position: absolute;
       bottom: 80px;
