--- a/index.html
+++ b/index.html
@@ -129,13 +129,14 @@
     right: 0;
     z-index: 1000;
     display: none;
-    background: #d5e6de;
+    background:  #66c2a5;
     padding: 12px;
     border-radius: 10px;
     width: 260px;
     height: 400px;
     box-shadow: 0 0 12px rgba(0, 0, 0, 0.4);
     font-family: sans-serif;
+    opacity: 0.8;
 
 
     input[type="text"], textarea {
