--- a/index.html
+++ b/index.html
@@ -14,7 +14,18 @@
   <!-- Leaflet Control Geocoder -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
   <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
+  <script>
+  const map = L.map('map', {
+    zoomControl: true,
+    attributionControl: false
+  }).setView([7.8731, 80.7718], 7);
 
+  // Light basemap with NO labels
+  const darkNoLabel = L.tileLayer('https://{s}.basemaps.cartocdn.com/light_nolabels/{z}/{x}/{y}{r}.png', {
+    subdomains: 'abcd',
+    attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors &copy; <a href="https://carto.com/">CARTO</a>'
+  }).addTo(map);
+</script>
   <style>
     html, body {
       margin: 0;
