--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
       position: fixed; bottom: 80px; left: 20px; z-index: 1000;padding: 8px 12px; background-color: #66c2a5; color: white; border: none; border-radius: 6px; cursor: pointer;
     }
     #report-box {
-    position: relative;
-    bottom: 100px;
-    right: 1px;
+    position: fixed;
+    bottom: 20%;
+    right: 0;
     z-index: 1000;
     display: none;
     background:  #66c2a5;
