--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
       position: fixed; bottom: 80px; left: 20px; z-index: 1000;padding: 8px 12px; background-color: #66c2a5; color: white; border: none; border-radius: 6px; cursor: pointer;
     }
     #report-box {
-    position: fixed;
-    bottom: 20%;
+    position: relative;
+    bottom: 15%;
     right: 0;
     z-index: 1000;
     display: none;
