--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
     }
     #report-box {
     position: relative;
-    bottom: 15%;
-    right: 0;
+    bottom: 80px;
+    right: -8px;
     z-index: 1000;
     display: none;
     background:  #66c2a5;
