--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       position: fixed; bottom: 80px; left: 20px; z-index: 1000;padding: 8px 12px; background-color: #66c2a5; color: white; border: none; border-radius: 6px; cursor: pointer;
     }
     #report-box {
-    position: relative;
+    position: absolute;
     bottom: 80px;
     right: -8px;
     z-index: 1000;
