--- a/index.html
+++ b/index.html
@@ -124,19 +124,19 @@
       position: fixed; bottom: 80px; left: 20px; z-index: 1000;padding: 8px 12px; background-color: #66c2a5; color: white; border: none; border-radius: 6px; cursor: pointer;
     }
     #report-box {
-    position: absolute;
+    position: fixed;
     bottom: 80px;
-    right: -8px;
+    right: 500px;
     z-index: 1000;
     display: none;
     background:  #66c2a5;
     padding: 12px;
     border-radius: 10px;
-    width: 260px;
+    width: 280px;
     height: 400px;
     box-shadow: 0 0 12px rgba(0, 0, 0, 0.4);
     font-family: sans-serif;
-    opacity: 0.8;
+    opacity: 0.6;
     }
 
 
