--- a/index.html
+++ b/index.html
@@ -125,18 +125,15 @@
     }
     #report-box {
     position: fixed;
-    bottom: 80px;
-    right: 500px;
-    z-index: 1000;
-    display: none;
-    background:  #66c2a5;
-    padding: 12px;
-    border-radius: 10px;
-    width: 280px;
-    height: 400px;
-    box-shadow: 0 0 12px rgba(0, 0, 0, 0.4);
-    font-family: sans-serif;
-    opacity: 0.6;
+  bottom: 20px;
+  right: 20px;
+  width: 350px;
+  max-height: 80vh;
+  background-color: rgba(57, 182, 142, 0.9); /* slightly transparent green */
+  border-radius: 15px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+  padding: 20px;
+  z-index: 1000;
     }
 
 
