--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
     }
     #report-box {
     position: fixed;
-  bottom: 20px;
-  right: 20px;
+  bottom: 80px;
+  left: 10px;
   width: 350px;
   max-height: 80vh;
   background-color: rgba(57, 182, 142, 0.9); /* slightly transparent green */
