--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
     #report-box {
     position: fixed;
   bottom: 80px;
-  left: 10px;
+  right: 10px;
   width: 350px;
   max-height: 80vh;
   background-color: rgba(57, 182, 142, 0.9); /* slightly transparent green */
-  border-radius: 15px;
+  border-radius: 10px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
   padding: 20px;
   z-index: 1000;
