--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
    #report-toggle-button {
       position: fixed;
       bottom: 40px;
-      right: 20px;
+      left: 20px;
       z-index: 9999;
       background-color: #056e36;
       color: white;
