--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
    #report-toggle-button {
       position: fixed;
-      bottom: 40px;
+      bottom: 60px;
       left: 20px;
       z-index: 9999;
       background-color: #056e36;
@@ -239,9 +239,9 @@
 
 
       <!-- Report Toggle -->
-      <div id="report-toggle-button">
-        <button onclick="toggleReportBox()">Click here to Comment...!</button>
-      </div>
+      
+        <button id="report-toggle-button" onclick="toggleReportBox()">Click here to Comment...!</button>
+      
 
       <!-- Report Box -->
       <div id="report-form-container">
