--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 <iframe name="hidden_iframe" style="display:none;" onload="if(submitted){ handleSuccess(); }"></iframe>
 
 
-<div id="recent-comments" style="margin-top: 150px; background: #2a2f2e; padding: 10px; border-radius: 8px;">
+<div id="recent-comments" style="position: fixed; bottom: 90px; left: 20px; width: 200px; background: #2a2f2e; padding: 10px; border-radius: 8px;">
   <h2 style="font-size: 14px; margin-bottom: 80px; color: #66c2a5;">Recent Comments</h2>
   <ul id="comments-list" style="list-style: none; padding: 0; font-size: 12px; color: #ddd;"></ul>
 </div>
