--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
    #report-toggle-button {
       position: fixed;
-      bottom: 60px;
+      bottom: 80px;
       left: 20px;
       z-index: 9999;
       background-color: #66c2a5;
@@ -134,7 +134,7 @@
     /* Floating Form */
     #report-form-container {
       position: fixed;
-      bottom: 70px;
+      bottom: 85px;
       right: 20px;
       width: 300px;
       background:#66c2a5;
@@ -177,7 +177,7 @@
     }
 
     #report-form-container button {
-      background-color: #056930;
+      background-color: #05694d;
       color: white;
       border: none;
       padding: 8px;
@@ -282,9 +282,9 @@
 <iframe name="hidden_iframe" style="display:none;" onload="if(submitted){ handleSuccess(); }"></iframe>
 
 
-<div id="recent-comments" style="position: fixed; bottom: 90px; left: 20px; width: 200px; background: #2a2f2e; padding: 10px; border-radius: 8px;">
-  <h2 style="font-size: 14px; margin-bottom: 80px; color: #66c2a5;">Recent Comments</h2>
-  <ul id="comments-list" style="list-style: none; padding: 0; font-size: 12px; color: #ddd;"></ul>
+<div id="recent-comments" style="position: fixed;bottom: 85px;right: 20px;width: 200px; background:  #6a6e6c; padding: 10px; border-radius: 8px;">
+  <h2 style="font-size: 14px; margin-bottom: 80px; color: #39826b;">Recent Comments</h2>
+  <ul id="comments-list" style="list-style: none; padding: 0; font-size: 12px; color: black;"></ul>
 </div>
 
 <footer>
