--- a/index.html
+++ b/index.html
@@ -198,15 +198,7 @@
       text-align: center;
       margin-top: 10px;
     }
-  footer {
-      text-align: center;
-      padding: 1rem;
-      font-size: 0.9rem;
-      background: linear-gradient(to right, #00695c, #66c2a5);
-       color:white;
-      margin-top: 20px;
-    }
-
+ 
   </style>
 </head>
 <body>
@@ -282,7 +274,7 @@
 <iframe name="hidden_iframe" style="display:none;" onload="if(submitted){ handleSuccess(); }"></iframe>
 
 
-<div id="recent-comments" style="position: fixed;bottom: 85px;right: 20px;width: 200px; background:  #6a6e6c; padding: 10px; border-radius: 8px;">
+<div id="recent-comments" style="position: fixed;bottom: 85px;right: 20px; background:  #6a6e6c; padding: 10px; border-radius: 8px;">
   <h2 style="font-size: 14px; margin-bottom: 80px; color: #39826b;">Recent Comments</h2>
   <ul id="comments-list" style="list-style: none; padding: 0; font-size: 12px; color: black;"></ul>
 </div>
