--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 <iframe name="hidden_iframe" style="display:none;" onload="if(submitted){ handleSuccess(); }"></iframe>
 
 
-<div id="recent-comments" style="position: fixed;bottom: 85px;left: 20px;widt:200;
+<div id="recent-comments" style="position: fixed;bottom: 85px;right: 300px;width:200px;
       z-index: 9999; background:  #6a6e6c; padding: 10px; border-radius: 8px;">
   <h2 style="font-size: 14px; margin-bottom: 80px; color: #39826b;">Recent Comments</h2>
   <ul id="comments-list" style="list-style: none; padding: 0; font-size: 12px; color: black;"></ul>
