--- a/index.html
+++ b/index.html
@@ -274,15 +274,13 @@
 <iframe name="hidden_iframe" style="display:none;" onload="if(submitted){ handleSuccess(); }"></iframe>
 
 
-<div id="recent-comments" style="position: fixed;bottom: 85px;right: 300px;width:200px;
-      z-index: 9999; background:  #6a6e6c; padding: 10px; border-radius: 8px;">
-  <h2 style="font-size: 14px; margin-bottom: 80px; color: #39826b;">Recent Comments</h2>
+<div id="recent-comments" style="position: fixed;bottom: 85px;right: 100px;width:150px;
+      z-index: 9999; background:  #b7c4c0; opacity:0.5;padding: 10px; border-radius: 8px;">
+  <h2 style="font-size: 14px; margin-bottom: 80px; color: #66c2a5;">Recent Comments</h2>
   <ul id="comments-list" style="list-style: none; padding: 0; font-size: 12px; color: black;"></ul>
 </div>
 
-<footer>
-    &copy; 2025 Forest Monitoring Tool – Developed for GIS & Remote Sensing Projects, University of Moratuwa
-  </footer>
+#b7c4c0
       
 <script src="js/main.js"></script>
 
