--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@
     /* Floating Form */
     #report-form-container {
       position: fixed;
-      bottom: 80px;
+      bottom: 73px;
       right: 20px;
       width: 300px;
       background:#66c2a5;
-      opacity:0.8;
+      opacity:8;
       border: 1px solid #ddd;
       border-radius: 8px;
       padding: 15px;
@@ -274,9 +274,10 @@
 <iframe name="hidden_iframe" style="display:none;" onload="if(submitted){ handleSuccess(); }"></iframe>
 
 
-<div id="recent-comments" style="position: fixed;bottom: 60px;right: 150px;width:200px;
-      z-index: 9997; background:  #1a1f1e; opacity:8;padding: 10px; border-radius: 8px;">
+<div id="recent-comments" style="position: fixed;bottom: 57px;right: 70px;width:200px;
+      z-index: 9997; background:  #1a1f1e; opacity:1;padding: 10px; border-radius: 8px;">
   <h2 style="font-size: 14px; margin-bottom: 80px; color: #66c2a5;">Recent Comments</h2>
+    <h3 style="font-size: 11px; margin-bottom: 65px; color: #51a68b;">Click the recent updates below to know the latest status</h2>
   <ul id="comments-list" style="list-style: none; padding: 0; font-size: 12px; color: white;"></ul>
 </div>
 
