--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
     #success-message {
       display: none;
-      color: green;
+      color: black;
       font-size: 13px;
       text-align: center;
       margin-top: 10px;
