--- a/index.html
+++ b/index.html
@@ -276,8 +276,8 @@
 
 <div id="recent-comments" style="position: fixed;bottom: 57px;right: 40px;width:200px;
       z-index: 9997; background:  #222927; opacity:0.9;padding: 10px; border-radius: 5px;">
-  <h2 style="font-size: 14px; margin-bottom: 80px; color: #66c2a5;">Recent Comments</h2>
-    <h3 style="font-size: 11px; margin-bottom: 70px; color: #51a68b;">Click the recent updates below to know the latest status</h3>
+  <h2 style="font-size: 14px; margin-bottom: 60px; color: #66c2a5;">Click The Recent Updates Below To Know The Latest Status</h2>
+    
   <ul id="comments-list" style="list-style: none; padding: 0; font-size: 12px; color: white;"></ul>
 </div>
 
