--- a/index.html
+++ b/index.html
@@ -280,26 +280,9 @@
     
   <ul id="comments-list" style="list-style: none; padding: 0; font-size: 12px; color: white;"></ul>
 </div>
-
-
-<div id="info-card" style="
-  display: none;
-  position: fixed;
-  bottom: 75px;
-  right: 40px;
-  width: 160px;
-  background: white;
-  color: black;
-  border-radius: 10px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-  padding: 15px;
-  z-index: 999;
-  transition: all 0.3s ease;
-">
-  <div style="text-align: right;">
-    <button onclick="document.getElementById('info-card').style.display='none'" style="border: none; background: none; font-size: 16px;">❌</button>
-  </div>
-  <div id="info-card-content"></div>
+<div style="background:white; padding:10px; border-radius:10px; margin-top:20px;">
+  <h3 style="text-align:center;">Issue Type Breakdown</h3>
+  <canvas id="issueChart" width="300" height="300"></canvas>
 </div>
 
       
