--- a/index.html
+++ b/index.html
@@ -282,8 +282,10 @@
 </div>
 <div style="background:white; padding:10px; border-radius:10px; margin-top:20px;">
   <h3 style="text-align:center;">Issue Type Breakdown</h3>
- 
+  <canvas id="issueChart" width="300" height="300"></canvas>
 </div>
+
+
 
       
 <script src="js/main.js"></script>
