--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css" />
- 
+  <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
 
   <style>
     html, body {
@@ -193,7 +193,7 @@
 
     #success-message {
       display: none;
-      color: black;
+      color: green;
       font-size: 13px;
       text-align: center;
       margin-top: 10px;
@@ -246,7 +246,7 @@
   <form id="gform" action="https://docs.google.com/forms/d/e/1FAIpQLScmXSGhM1dPuGSt6omWF5PaoB8oYD68K2gug6VImVt0PgaxAg/formResponse" method="POST" target="hidden_iframe" onsubmit="submitted=true;">
     
     <label>Location</label>
-    <input name="entry.1411538969" type="text" placeholder="Serach in the map" required>
+    <input name="entry.1411538969" type="text" placeholder="Location" required>
 
     <label>Issue Type</label>
     <select name="entry.792124572" required>
@@ -276,8 +276,8 @@
 
 <div id="recent-comments" style="position: fixed;bottom: 57px;right: 40px;width:200px;
       z-index: 9997; background:  #222927; opacity:0.9;padding: 10px; border-radius: 5px;">
-  <h2 style="font-size: 14px; margin-bottom: 60px; color: #66c2a5;">Click The Recent Updates Below To Know The Latest Status</h2>
-    
+  <h2 style="font-size: 14px; margin-bottom: 80px; color: #66c2a5;">Recent Comments</h2>
+    <h3 style="font-size: 11px; margin-bottom: 70px; color: #51a68b;">Click the recent updates below to know the latest status</h3>
   <ul id="comments-list" style="list-style: none; padding: 0; font-size: 12px; color: white;"></ul>
 </div>
 
