--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
   <form id="gform" action="https://docs.google.com/forms/d/e/1FAIpQLScmXSGhM1dPuGSt6omWF5PaoB8oYD68K2gug6VImVt0PgaxAg/formResponse" method="POST" target="hidden_iframe" onsubmit="submitted=true;">
     
     <label>Location</label>
-    <input name="entry.1411538969" type="text" placeholder="search in the map" required>
+    <input name="entry.1411538969" type="text" placeholder="Location" required>
 
     <label>Issue Type</label>
     <select name="entry.792124572" required>
