--- a/index.html
+++ b/index.html
@@ -209,6 +209,13 @@
       <p> "District-wise Vegetation Cover Loss"
 </p>
         <div id="chart-box">
+          <div class="chart-box" id="live-issue-box">
+  <h2 style="font-size: 16px; margin-bottom: 10px;">Live Issue Chart</h2>
+  <canvas id="live-issue-chart" width="250" height="250"></canvas>
+  <p id="chart-status" style="color: lightgray; font-size: 12px;"></p>
+</div>
+
+          
   <h2>Select a District to View Forest Loss</h2>
   <img id="chart-image" src="" alt="District Chart" style="max-width:100%; display:none;" />
 </div>
