--- a/index.html
+++ b/index.html
@@ -194,12 +194,15 @@
       margin-top: 10px;
     }
     #chart-box1 {
+      position: fixed;
+      bottom: 57px;
+      right: 40px;
+      width:200px;
       background: white;
-      color: black;
-      margin-top: 100px;
       padding: 15px;
       border-radius: 12px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      z-index: 9997;  opacity:0.9; 
     }
  
   </style>
