--- a/index.html
+++ b/index.html
@@ -193,17 +193,7 @@
       text-align: center;
       margin-top: 10px;
     }
-    #chart-box1 {
-      position: fixed;
-      bottom: 57px;
-      right: 40px;
-      width:200px;
-      background: white;
-      padding: 15px;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      z-index: 9997;  opacity:0.9; 
-    }
+ 
  
   </style>
 </head>
@@ -282,14 +272,26 @@
   <ul id="comments-list" style="list-style: none; padding: 0; font-size: 12px; color: white;"></ul>
 </div>
 
-     <div id="chart-box1">
-          <div class="chart-box1" id="live-issue-box">
-  <h2 style="font-size: 16px; margin-bottom: 10px;">Live Issue Chart</h2>
+    <div class="chart-box1" style="
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background: white;
+  color: black;
+  padding: 15px;
+  border-radius: 12px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+  z-index: 9999;
+  width: 280px;
+  font-family: sans-serif;
+">
+  <h2 style="font-size: 16px; margin-bottom: 10px; color: #00695c;">
+    🔍 Live Community Reports
+  </h2>
   <canvas id="live-issue-chart" width="250" height="250"></canvas>
-  <p id="chart-status" style="color: lightgray; font-size: 12px;"></p>
+  <p id="chart-status" style="color: gray; font-size: 12px; margin-top: 10px;"></p>
 </div>
 
-</div>
       
 <script src="js/main.js"></script>
 
