--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
   <form id="gform" action="https://docs.google.com/forms/d/e/1FAIpQLScmXSGhM1dPuGSt6omWF5PaoB8oYD68K2gug6VImVt0PgaxAg/formResponse" method="POST" target="hidden_iframe" onsubmit="submitted=true;">
     
     <label>Location</label>
-    <input name="entry.1411538969" type="text" placeholder="search in the map" required>
+    <input name="entry.1411538969" type="text" placeholder="Location" required>
 
     <label>Issue Type</label>
     <select name="entry.792124572" required>
@@ -276,10 +276,29 @@
 
 <div id="recent-comments" style="position: fixed;bottom: 57px;right: 40px;width:200px;
       z-index: 9997; background:  #222927; opacity:0.9;padding: 10px; border-radius: 5px;">
-  <h2 style="font-size: 14px; margin-bottom: 60px; color: #66c2a5;">Click The Recent Updates Below To Know The Latest Status</h2>
+  <h2 style="font-size: 14px; margin-bottom: 80px; color: #66c2a5;">Click the recent updates below to know the latest status</h2>
   <ul id="comments-list" style="list-style: none; padding: 0; font-size: 12px; color: white;"></ul>
 </div>
 
+<div class="chart-box1" style="
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background: white;
+  color: black;
+  padding: 15px;
+  border-radius: 12px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+  z-index: 9999;
+  width: 280px;
+  font-family: sans-serif;
+">
+  <h2 style="font-size: 16px; margin-bottom: 10px; color: #00695c;">
+    🔍 Live Community Reports
+  </h2>
+  <canvas id="live-issue-chart" width="250" height="250"></canvas>
+  <p id="chart-status" style="color: gray; font-size: 12px; margin-top: 10px;"></p>
+</div>
 
       
 <script src="js/main.js"></script>
