--- a/index.html
+++ b/index.html
@@ -282,21 +282,21 @@
 
 <div class="chart-box1" style="
   position: fixed;
-  bottom: 20px;
-  right: 20px;
+  bottom: 100px;
+  left: 20px;
   background: white;
   color: black;
   padding: 15px;
   border-radius: 12px;
   box-shadow: 0 4px 12px rgba(0,0,0,0.2);
   z-index: 9999;
-  width: 280px;
+  width: 240px;
   font-family: sans-serif;
 ">
-  <h2 style="font-size: 16px; margin-bottom: 10px; color: #00695c;">
-    🔍 Live Community Reports
+  <h2 style="font-size: 14px; margin-bottom: 10px; color: #00695c;">
+    Live Issue Type Breakdowns
   </h2>
-  <canvas id="live-issue-chart" width="250" height="250"></canvas>
+  <canvas id="live-issue-chart" width="200" height="250"></canvas>
   <p id="chart-status" style="color: gray; font-size: 12px; margin-top: 10px;"></p>
 </div>
 
