--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 <iframe name="hidden_iframe" style="display:none;" onload="if(submitted){ handleSuccess(); }"></iframe>
 
 
-<div id="recent-comments" style="position: fixed;bottom: 57px;right: 40px;width:200px;
+<div id="recent-comments" style="position: fixed;bottom: 57px;right: 30px;width:200px;
       z-index: 9997; background:  #222927; opacity:0.9;padding: 10px; border-radius: 5px;">
   <h2 style="font-size: 14px; margin-bottom: 80px; color: #66c2a5;">Click the recent updates below to know the latest status</h2>
   <ul id="comments-list" style="list-style: none; padding: 0; font-size: 12px; color: white;"></ul>
@@ -283,8 +283,9 @@
 <div class="chart-box1" style="
   position: fixed;
   bottom: 100px;
-  left: 20px;
+  left: 351px;
   background: white;
+  opacity:0.1;
   color: black;
   padding: 15px;
   border-radius: 12px;
