--- a/index.html
+++ b/index.html
@@ -273,8 +273,24 @@
 </div>
 <iframe name="hidden_iframe" style="display:none;" onload="if(submitted){ handleSuccess(); }"></iframe>
 
+<button id="toggle-recent-comments-btn" style="
+  position: fixed;
+  bottom: 160px;
+  left: 20px;
+  z-index: 9999;
+  background-color: #1b9e77;
+  color: white;
+  border: none;
+  padding: 10px 15px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 13px;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+">
+  Show/Hide Recent Comments
+</button>
 
-<div id="recent-comments" style="position: fixed;bottom: 57px;right: 11px;width:200px;
+<div id="recent-comments" style="display:none;position: fixed;bottom: 57px;right: 11px;width:200px;
       z-index: 9997; background:  #222927; opacity:0.9;padding: 10px; border-radius: 5px;">
   <h2 style="font-size: 14px; margin-bottom: 80px; color: #66c2a5;">Click the recent updates below to know the latest status</h2>
   <ul id="comments-list" style="list-style: none; padding: 0; font-size: 12px; color: white;"></ul>
