--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       bottom: 80px;
       left: 20px;
       z-index: 9999;
-      background-color: #66c2a5;
+      background-color: #1b9e77;
       color: white;
       border: none;
       padding: 10px 15px;
@@ -287,7 +287,7 @@
   font-size: 13px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.3);
 ">
-  Show/Hide Recent Comments
+  Click to see the Recent Comments
 </button>
 
 <div id="recent-comments" style="display:none;position: fixed;bottom: 57px;right: 11px;width:200px;
@@ -316,6 +316,22 @@
   <canvas id="live-issue-chart" width="50" height="50"></canvas>
   <p id="chart-status" style="color: gray; font-size: 8px; margin-top: 10px;"></p>
 </div>
+
+
+<div id="notification-box" style="
+  position: fixed;
+  bottom: 120px;
+  right: 20px;
+  background-color: #66c2a5;
+  color: white;
+  padding: 10px 15px;
+  border-radius: 6px;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+  font-size: 13px;
+  display: none;
+  z-index: 10000;
+  transition: opacity 0.3s ease;
+"></div>
 
       
 <script src="js/main.js"></script>
