--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 
 <div id="notification-box" style="
   position: fixed;
-  bottom: 120px;
+  top: 120px;
   right: 20px;
   background-color: #66c2a5;
   color: white;
