--- a/index.html
+++ b/index.html
@@ -311,8 +311,9 @@
   font-family: sans-serif;
 ">
   <h2 style="font-size: 13px; margin-bottom: 10px; color: #00695c;">
-    Live Issue Type Breakdowns
-  </h2>
+    Live Issue Type Breakdowns  </h2>
+   <p style="font-size: 10px; margin-bottom: 8px; color: #00695c;">  Move over the graph, you will find the information </p>
+ 
   <canvas id="live-issue-chart" width="50" height="50"></canvas>
   <p id="chart-status" style="color: gray; font-size: 8px; margin-top: 10px;"></p>
 </div>
